Bug 89340 - util/cairo-sphinx: compilation error on AIX ('MAP_NORESERVE' undeclared)
Summary: util/cairo-sphinx: compilation error on AIX ('MAP_NORESERVE' undeclared)
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-26 16:36 UTC by Michael Haubenwallner
Modified: 2015-03-05 22:49 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
proposed patch for when MAP_NORESERVE is unsupported (1.08 KB, patch)
2015-02-26 16:38 UTC, Michael Haubenwallner
Details | Splinter Review

Description Michael Haubenwallner 2015-02-26 16:36:10 UTC
Next one on AIX:

/.../cairo-9999/util/cairo-sphinx/sphinx.c: In function 'client_shm':
/.../cairo-9999/util/cairo-sphinx/sphinx.c:1336: error: 'MAP_NORESERVE' undeclared (first use in this function)
/.../cairo-9999/util/cairo-sphinx/sphinx.c:1336: error: (Each undeclared identifier is reported only once
/.../cairo-9999/util/cairo-sphinx/sphinx.c:1336: error: for each function it appears in.)
Makefile:631: recipe for target 'cairo_sphinx-sphinx.o' failed
make[4]: *** [cairo_sphinx-sphinx.o] Error 1
Comment 1 Michael Haubenwallner 2015-02-26 16:38:44 UTC
Created attachment 113848 [details] [review]
proposed patch for when MAP_NORESERVE is unsupported

Probably this should be done by some configure check, but that doesn't feel like worth the effort.
Thanks!
Comment 2 Behdad Esfahbod 2015-02-26 18:18:37 UTC
No need for configure if it can be done in code.
Comment 3 Bryce Harrington 2015-03-05 22:49:16 UTC
Thanks, pushed:
   ac75ab9..f72bd7c  master -> master


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.